<resources>
    <string name="app_name">whatsapp</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_text">Log In</string>
    <string name="signup_btn_text">Sign Up</string>
    <string name="name_hint">Username</string>
    <string name="log_out">Log Out</string>
    <string name="type_a_message">Type a message</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="sent">Send</string>
    <string name="vijay">Vijay</string>
</resources>